PROJECT( ogl )
CMAKE_MINIMUM_REQUIRED( VERSION 2.6)

SET(CMAKE_CXX_FLAGS "-std=c++11")
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( GLEW REQUIRED )

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})

ADD_EXECUTABLE(ogl "main.cpp")
TARGET_LINK_LIBRARIES(ogl ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
